fix content scrollbar

--- a/src/components/specific/projects/project-history-activity/ProjectHistoryActivity.css
+++ b/src/components/specific/projects/project-history-activity/ProjectHistoryActivity.css
@@ -1,6 +1,7 @@
 .history-activity-panel {
-  height: calc(100vh - 44px - 40px - 12px - 12px);
-  overflow: auto;
+  height: calc(100% - 40px);
+  display: flex;
+  flex-direction: column;
   .header {
     h3 {
       margin-bottom: 12px;
@@ -19,8 +20,12 @@
       }
     }
   }
+  .content {
+    flex: 1;
+    overflow: auto;
+  }
   .day-group {
-    margin-top: 20px;
+    margin-top: var(--spacing-unit);
     .day-title {
       font-size: 13px;
       color: var(--color-granite);
